[SETUP] Establish baseline

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<app-javascript-refresher></app-javascript-refresher>
-<app-promise-example></app-promise-example>
-<app-observable-example></app-observable-example>
-<app-template-syntax-legacy-example></app-template-syntax-legacy-example>
-<app-template-syntax-new-example></app-template-syntax-new-example>
-<app-input-binding-example></app-input-binding-example>
+App is running :)
+<!--<app-javascript-refresher class="example"></app-javascript-refresher>-->
 
