[example-200a] Basic Setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 {{timeCounter}}
 
-<div>
-  Styled button example:
-  <button class="btn btn-primary">Click</button>
-</div>
+<!--<div>-->
+<!--  Styled button example:-->
+<!--  <button class="btn btn-primary">Click</button>-->
+<!--</div>-->
