--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,23 +3,10 @@
 </div>
 
 <div>
-  <button class="btn btn-primary" (click)="decrement()">-</button>
-  <span class="m-2">{{valueCounter}}</span>
-  <button class="btn btn-primary" (click)="increment()">+</button>
-</div>
-
-<div>
-  @if(valueCounter <=5) {
-    <p>LOW</p>
-  } @else if(valueCounter >= 6 && valueCounter <=15) {
-    <p>MID</p>
-  } @else if(valueCounter >= 16) {
-    <p>HIGH</p>
-  }
-</div>
-
-<div>
-  @for(el of counterArray; track el) {
-    <span>*</span>
+  <app-child [(valueCounter)]="valueCounter"></app-child>
+  @if (valueCounter%2 ==0) {
+    {{valueCounter}} is even
+  } @else {
+    {{valueCounter}} is odd
   }
 </div>
