--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div>
-  <app-child></app-child>
+  <app-child [(valueCounter)]="valueCounter"></app-child>
 
   @if (valueCounter%2 ==0) {
     {{valueCounter}} is even
