--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <div>
-  {{timeCounter}}
+  <h5>{{coordinates.x}} | {{coordinates.y}}</h5>
+</div>
+<div>
+  <div>{{timeCounter}}</div>
+
+  @if(showTimeIndicator) {
+    <p>TIME!</p>
+  }
+
 </div>
 <div>
   <app-child></app-child>
@@ -11,3 +19,5 @@
     }
   }
 </div>
+
+<button class="btn btn-primary" (click)="reset()">Reset</button>
