--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,20 @@
   border-radius: 5px;
   margin-bottom: 1rem;
   display: block;
+
+  &-time {
+    display: inline-block;
+    padding: .2rem;
+    color: white;
+    border-radius: 5px;
+
+    &-red {
+      background-color: red;
+    }
+    &-green {
+      background-color: green;
+    }
+  }
 }
+
+
