--- a/src/app/+search/search.component.html
+++ b/src/app/+search/search.component.html
@@ -1,3 +1,3 @@
 <p>search works!</p>
-<app-filter></app-filter>
+<app-filter (searchStarted)="searchStarted($event)"></app-filter>
 <app-country-list></app-country-list>
